tests/files/type_checker_tests/should_pass/366.cmdr
//Should type check
fn b(c) {
	m = 1;
	b(m + 1);
}
