tests/files/type_checker_tests/should_fail/064.cmdr
//Should fail if variable already exists
type x = int;
foo = fn (x: int): int {
    return x;
};
